# IlluminatIR-Minion

./: .gitmodules  CMakeLists.txt  README.md
cmake/: avr-gcc.toolchain.cmake
src/: config.h  crc8.c  crc8.h  gammaLut.c  gammaLut.h  illuminatir.c  illuminatir.h  main.c  usiserial.c  usiserial.h
util/: CMakeLists.txt  eeprom_config.c  gammaLut.py
